--- a/manifests/radarr-exporter.yaml
+++ b/manifests/radarr-exporter.yaml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sonarr-exporter
+  name: radarr-exporter
   namespace: monitoring
   labels:
-    app.kubernetes.io/name: sonarr-exporter
-    app.kubernetes.io/instance: sonarr-exporter
+    app.kubernetes.io/name: radarr-exporter
+    app.kubernetes.io/instance: radarr-exporter
 spec:
   clusterIP: None
   selector:
-    app.kubernetes.io/name: sonarr-exporter
-    app.kubernetes.io/instance: sonarr-exporter
+    app.kubernetes.io/name: radarr-exporter
+    app.kubernetes.io/instance: radarr-exporter
   ports:
     - name: monitoring
       port: 9811
@@ -19,16 +19,16 @@ spec:
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: sonarr-exporter
+  name: radarr-exporter
   namespace: monitoring
   labels:
-    app.kubernetes.io/name: sonarr-exporter
-    app.kubernetes.io/instance: sonarr-exporter
+    app.kubernetes.io/name: radarr-exporter
+    app.kubernetes.io/instance: radarr-exporter
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: sonarr-exporter
-      app.kubernetes.io/instance: sonarr-exporter
+      app.kubernetes.io/name: radarr-exporter
+      app.kubernetes.io/instance: radarr-exporter
   endpoints:
     - port: monitoring
       interval: 60s
@@ -37,44 +37,44 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: sonarr-exporter
+  name: radarr-exporter
   namespace: monitoring
   labels:
-    app.kubernetes.io/name: sonarr-exporter
-    app.kubernetes.io/instance: sonarr-exporter
+    app.kubernetes.io/name: radarr-exporter
+    app.kubernetes.io/instance: radarr-exporter
   annotations:
     fluxcd.io/ignore: "false"
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.sonarr-exporter: semver:~v1
+    fluxcd.io/tag.radarr-exporter: semver:~v1
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app.kubernetes.io/name: sonarr-exporter
-      app.kubernetes.io/instance: sonarr-exporter
+      app.kubernetes.io/name: radarr-exporter
+      app.kubernetes.io/instance: radarr-exporter
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: sonarr-exporter
-        app.kubernetes.io/instance: sonarr-exporter
+        app.kubernetes.io/name: radarr-exporter
+        app.kubernetes.io/instance: radarr-exporter
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "monitoring"
     spec:
       containers:
-        - name: sonarr-exporter
-          image: onedr0p/sonarr-exporter:v1.1.0
+        - name: radarr-exporter
+          image: onedr0p/radarr-exporter:v1.2.2
           imagePullPolicy: IfNotPresent
           env:
             - name: INTERVAL
               value: "20m"
-            - name: SONARR_HOSTNAME
-              value: "http://sonarr.default.svc.cluster.local:8989"
-            - name: SONARR_APIKEY
+            - name: RADARR_HOSTNAME
+              value: "http://radarr.default.svc.cluster.local:7878"
+            - name: RADARR_APIKEY
               valueFrom:
                 secretKeyRef:
-                  name: sonarr-exporter
+                  name: radarr-exporter
                   key: api-key
           ports:
             - name: monitoring
