--- a/examples/kubernetes/radarr-exporter.yaml
+++ b/examples/kubernetes/radarr-exporter.yaml
@@ -14,7 +14,7 @@ spec:
     app.kubernetes.io/instance: radarr-exporter
   ports:
   - name: monitoring
-    port: 9811
+    port: 9707
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -32,6 +32,7 @@ spec:
   endpoints:
   - port: monitoring
     interval: 5m
+    scrapeTimeout: 1m
     path: /metrics
 ---
 kind: Deployment
@@ -45,7 +46,7 @@ metadata:
   annotations:
     fluxcd.io/ignore: "false"
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.radarr-exporter: semver:~v1
+    fluxcd.io/tag.radarr-exporter: semver:~v2
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -64,7 +65,7 @@ spec:
     spec:
       containers:
       - name: radarr-exporter
-        image: onedr0p/radarr-exporter:v1.2.3
+        image: onedr0p/radarr-exporter:v2.1.0
         imagePullPolicy: IfNotPresent
         env:
         - name: INTERVAL
