--- a/examples/kubernetes/radarr-exporter.yaml
+++ b/examples/kubernetes/radarr-exporter.yaml
@@ -65,7 +65,7 @@ spec:
     spec:
       containers:
       - name: radarr-exporter
-        image: onedr0p/radarr-exporter:v2.1.0
+        image: onedr0p/radarr-exporter:v2.1.1
         imagePullPolicy: IfNotPresent
         env:
         - name: RADARR_HOSTNAME
@@ -80,13 +80,13 @@ spec:
           containerPort: 9707
         livenessProbe:
           httpGet:
-            path: /liveness
+            path: /healthz
             port: monitoring
           failureThreshold: 5
           periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: /readiness
+            path: /healthz
             port: monitoring
           failureThreshold: 5
           periodSeconds: 10
